# OmniMind.ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  IDEA.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STEPS.md  Makefile  README.md  SPEC.md  TASKS.md  VERCEL_QUICKSTART.md  alembic.ini  cli.py  docker-compose.yml  tox.ini  vercel.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt
backend/app/: main.py
backend/artifacts/: DATABASE_TASK_ARTIFACTS.md
backend/audit/: logger.py  verify.py
backend/core/: dependencies.py  pii_scrub.py  security.py
backend/db/: migrations.py  neo4j.py  qdrant.py  redis.py  session.py
backend/events/: registry.py  store.py
backend/observability/: __init__.py  health.py  metrics.py
backend/observatory/: __init__.py  read_models.py
backend/testing/: __init__.py  chaos.py
backend/tests/: conftest.py  test_api.py  test_audit.py  test_chaos.py  test_config.py  test_databases.py  test_envelope.py  test_error_contract.py  test_error_enforcer.py  test_event_store.py  test_events.py  test_health.py  test_http_transport.py  test_logging.py  test_managed_agent_service.py  test_metrics.py  test_missing_endpoints.py  test_models.py  test_observatory.py  test_pii_scrub.py  test_qdrant.py  test_rbac.py  test_secrets.py  test_session.py  test_websocket_gateway.py  test_wow_features.py
backend/websocket/: __init__.py  gateway.py
kernel/: app.py  bootstrap.py  pyproject.toml  pytest.ini
kernel/analytics/: __init__.py  counterfactual.py  org_iq.py  time_machine.py
kernel/compiler/: __init__.py  compiler.py  mission_ir.py
kernel/core/: config.py  event.py  event_bus.py  event_registry.py  events.py  exceptions.py  logging.py  ports.py  registry.py
kernel/services/: __init__.py  constitution.py  creative_service.py  department_manager.py  digital_twin.py  evolution.py  gemini_copilot.py  git_history_service.py  learning.py  managed_agent_service.py  mission_scheduler.py  model_router.py  organization_manager.py  reflection.py  research_service.py  resource_ledger.py  resource_policy.py  skill_registry.py  worker_scheduler.py
kernel/tests/: test_analytics.py  test_bootstrap.py  test_compiler.py  test_config.py  (+17 more)
(+257 files in other folders)
