[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omnimind-backend"
version = "0.1.0"
requires-python = ">=3.11"
description = "EnterpriseOS backend shell"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.2.0",
    "sqlalchemy[asyncio]==2.0.30",
    "redis==5.0.7",
    "neo4j==5.21.0",
    "qdrant-client==1.9.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "aiofiles==23.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "kernel*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
